# SummerPuppy

./: .coverage  .gitignore  CLAUDE.md  LICENSE.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.local.json
docker/: Dockerfile  docker-compose.local.yml
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml
src/summer_puppy/: __init__.py
tests/: conftest.py
tests/integration/: conftest.py  test_agent_integration.py  test_api_lifecycle.py  test_approval_lifecycle.py  test_cross_pool_flow.py  test_e2e_smoke.py  test_enrichment_pipeline.py  test_kafka_integration.py  test_learnable_loop.py  test_neo4j_integration.py  test_pipeline_integration.py  test_sprint8_features.py
tests/unit/: conftest.py  test_agent_graph.py  test_analyze_handler.py  test_api_approvals.py  test_api_auth.py  test_api_customers.py  test_api_events.py  test_api_health.py  test_api_policies.py  test_api_reporting.py  test_audit.py  test_channel.py  test_dev_bot_api.py  test_dev_bot_github_client.py  test_dev_bot_handler.py  test_dev_bot_models.py  test_dev_bot_patch_generator.py  test_dev_bot_patch_tester.py  test_dev_bot_pr_submitter.py  test_dev_bot_quality_tracker.py  test_dev_bot_story_builder.py  test_enrichment_wiring.py  test_evaluator.py  test_event_models.py  test_execution_models.py  test_executors.py  test_findings_to_events.py  test_kafka_bus.py  test_knowledge_store.py  test_llm_client.py  test_llm_prompts.py  test_local_deployment.py  test_logging_config.py  test_mock_adapters.py  test_neo4j_connection.py  test_neo4j_skills_kb.py  (+38 more)
(+135 files in other folders)
