[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summer-puppy"
version = "0.2.0"
description = "Autonomous security operations and remediation platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "neo4j>=5.17,<7",
    "langgraph>=0.2,<1",
    "anthropic>=0.40,<1",
    "kafka-python>=2.0,<3",
    "structlog>=24.1,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.3,<1",
    "mypy>=1.9,<2",
    "testcontainers[neo4j]>=4.0,<5",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
